RESOLVED FIXED250460
[css-transitions] crash when transition-property is set to inherit from a parent with mismatched items in another transition property
https://bugs.webkit.org/show_bug.cgi?id=250460
Summary [css-transitions] crash when transition-property is set to inherit from a par...
Antoine Quint
Reported 2023-01-11 09:40:39 PST
We fixed a bug yesterday to correctly handle a case where transition-property is set to a custom property and another transition property has a longer list of items: bug 250401. However, this doesn't work and crashes when those properties are set on a parent and a child uses "inherit" to replicate them.
Attachments
Antoine Quint
Comment 1 2023-01-11 09:40:53 PST
Antoine Quint
Comment 2 2023-01-11 09:48:48 PST
Antoine Quint
Comment 3 2023-01-11 09:50:45 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/37882
EWS
Comment 4 2023-01-11 22:31:25 PST
Committed 258821@main (65cbbd06b50b): <https://commits.webkit.org/258821@main> Reviewed commits have been landed. Closing PR #8526 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.